Revision history for Bot::IRC::X::Retort

{{$NEXT}}
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year
        - Update Travis YAML
        - Adding Perl versions to test; annual general update for 2018

1.02      2016-11-29 14:03:50-08:00 America/Los_Angeles
        - Fix storage calls (because I remembered just now the bot preforks)

1.01      2016-11-10 20:24:32-08:00 America/Los_Angeles
        - First version, released on an unsuspecting world