@@ -17,16 +17,18 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.014",
   "NAME" => "Bot::IRC::X::Retort",
   "PREREQ_PM" => {
-    "strict" => 0,
-    "warnings" => 0
+    "exact" => 0
   },
   "TEST_REQUIRES" => {
+    "Bot::IRC" => 0,
+    "Bot::IRC::Store" => 0,
     "File::Spec" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
+    "Test2::V0" => 0,
     "Test::More" => 0,
-    "Test::Most" => 0,
-    "constant" => 0
+    "strict" => 0,
+    "warnings" => 0
   },
   "VERSION" => "1.03",
   "test" => {
@@ -36,12 +38,14 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Bot::IRC" => 0,
+  "Bot::IRC::Store" => 0,
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
+  "Test2::V0" => 0,
   "Test::More" => 0,
-  "Test::Most" => 0,
-  "constant" => 0,
+  "exact" => 0,
   "strict" => 0,
   "warnings" => 0
 );
