@@ -2,8 +2,7 @@ package Bot::IRC::X::Retort;
 # ABSTRACT: Bot::IRC plugin for bot-retorting to key words
 
 use 5.014;
-use strict;
-use warnings;
+use exact;
 
 # VERSION
 
